# advanced-python-itmo

./: .gitignore  README.md  pixi.toml  pyproject.toml
hw_1/: nl.py  tail.py  wc.py
hw_1/artifacts/: nl  tail  wc
hw_2/: Dockerfile  docker-compose.yml  main.py
hw_2/artifacts/: generated_table.tex  generated_table_and_image.tex  linkpypi
hw_2/artifacts/output_from_docker/: generated_table_and_image.tex
hw_3/: hash_mixin.py  main.py  matrix.py  mixins.py
hw_3/artifacts/: hash.txt
