[project]
name = "advanced-python-itmo"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["twine>=6.1.0,<7", "super-latex-tools>=0.1.0,<0.2", "super-latex-tool>=0.1.1,<0.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
advanced_python_itmo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.2,<3.14"
setuptools = ">=75.8.2,<76"
pdflatex = ">=0.1.3,<0.2"
