[project]
dependencies = []
name = "advanced-python-itmo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
advanced_python_itmo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.2,<3.14"
numpy = ">=2.2.4,<3"
pdflatex = ">=0.1.3,<0.2"
